[gd_scene load_steps=22 format=3 uid="uid://d2hha6frqxoja"]

[ext_resource type="Material" uid="uid://vst2an11tomo" path="res://barkley2/resources/Border/border_material.tres" id="1_n037p"]
[ext_resource type="Script" uid="uid://dsk5qqh2yowtx" path="res://barkley2/scenes/Objects/System/_shop/shop_screen.gd" id="1_qjdko"]
[ext_resource type="Theme" uid="uid://wdp4l5rs0tuh" path="res://barkley2/themes/dialogue.tres" id="2_qjdko"]
[ext_resource type="Script" uid="uid://cr5icxx3wijsf" path="res://barkley2/scenes/border/B2_panel_bg.gd" id="3_32y4x"]
[ext_resource type="Texture2D" uid="uid://d30fw6npat6u2" path="res://barkley2/assets/b2_original/images/merged/sRedfieldFace.png" id="4_32y4x"]
[ext_resource type="Script" uid="uid://21bcte5vesst" path="res://barkley2/scenes/border/B2_panel_bg_button.gd" id="4_gvrf7"]
[ext_resource type="Texture2D" uid="uid://cph4fl4lnsekc" path="res://barkley2/assets/b2_original/images/merged/s_diag_frame.png" id="5_brss5"]
[ext_resource type="Texture2D" uid="uid://c6qgpuri5x7hu" path="res://barkley2/assets/b2_original/images/merged/sHoopzFace.png" id="6_6qme6"]
[ext_resource type="Texture2D" uid="uid://d0ssfyh7jxm0c" path="res://barkley2/assets/b2_original/images/merged/s_breakout_icon.png" id="8_6qme6"]
[ext_resource type="FontFile" uid="uid://cbgm2fhhwo0ld" path="res://barkley2/resources/fonts/fn2.tres" id="9_icx7d"]
[ext_resource type="FontFile" uid="uid://drr75gc00ws56" path="res://barkley2/resources/fonts/fn1b.tres" id="10_yvjwj"]
[ext_resource type="PackedScene" uid="uid://dlhrkg7recebs" path="res://barkley2/scenes/Objects/System/_shop/shop_item.tscn" id="11_yvjwj"]
[ext_resource type="Texture2D" uid="uid://cr2prylg26oql" path="res://barkley2/assets/b2_original/images/merged/sButtonPapers.png" id="12_icx7d"]

[sub_resource type="Animation" id="Animation_e3eoe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("exit_btn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(138, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hoopz_face:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, 55)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shopowner_face:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(57, 55)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("breakout:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 128)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("shop_name:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, 6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("slide_border:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(319, 6)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("shop_panel:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(110, 6)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("bg:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.75)]
}

[sub_resource type="Animation" id="Animation_yvjwj"]
resource_name = "hide_menu"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("exit_btn:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(138, 200), Vector2(138, 240)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hoopz_face:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 55), Vector2(-105, 55)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shopowner_face:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(57, 55), Vector2(-54, 55)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("breakout:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 128), Vector2(-95, 128)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("shop_name:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 6), Vector2(-105, 6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("slide_border:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(319, 6), Vector2(598, 6)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("shop_panel:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(110, 6), Vector2(389, 6)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("bg:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.75), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_hurr3"]
resource_name = "hide_menu"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("exit_btn:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(138, 240), Vector2(138, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hoopz_face:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-105, 55), Vector2(6, 55)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("shopowner_face:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-54, 55), Vector2(57, 55)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("breakout:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-95, 128), Vector2(16, 128)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("shop_name:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-105, 6), Vector2(6, 6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("slide_border:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(598, 6), Vector2(319, 6)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("shop_panel:position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(389, 6), Vector2(110, 6)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("bg:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.75)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wloum"]
_data = {
&"RESET": SubResource("Animation_e3eoe"),
&"hide_menu": SubResource("Animation_yvjwj"),
&"show_menu": SubResource("Animation_hurr3")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_e3eoe"]
atlas = ExtResource("8_6qme6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_hurr3"]
font = ExtResource("9_icx7d")

[sub_resource type="LabelSettings" id="LabelSettings_wloum"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yvjwj"]
atlas = ExtResource("12_icx7d")
region = Rect2(243, 0, 81, 17)

[node name="shop_screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qjdko")
my_shop_name = "Mortimer's Candy Shop"
my_shop_type = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wloum")
}

[node name="bg" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.75)

[node name="hoopz_face" type="TextureRect" parent="."]
offset_left = 6.0
offset_top = 55.0
offset_right = 56.0
offset_bottom = 126.0
texture = ExtResource("5_brss5")

[node name="face_text" type="TextureRect" parent="hoopz_face"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -25.5
offset_right = 17.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_6qme6")

[node name="shopowner_face" type="TextureRect" parent="."]
offset_left = 57.0
offset_top = 55.0
offset_right = 107.0
offset_bottom = 126.0
texture = ExtResource("5_brss5")

[node name="shopowner_face_text" type="TextureRect" parent="shopowner_face"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 42.0
offset_bottom = 60.0
texture = ExtResource("4_32y4x")

[node name="breakout" type="Control" parent="."]
material = ExtResource("1_n037p")
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 128.0
offset_right = 99.0
offset_bottom = 168.0
theme = ExtResource("2_qjdko")
script = ExtResource("3_32y4x")
border_size = Vector2(83, 40)
metadata/_custom_type_script = "uid://cr5icxx3wijsf"

[node name="s_breakout_icon" type="TextureRect" parent="breakout"]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 28.0
offset_bottom = 28.0
texture = SubResource("AtlasTexture_e3eoe")

[node name="money_label" type="Label" parent="breakout"]
custom_minimum_size = Vector2(39, 16)
layout_mode = 0
offset_left = 31.0
offset_top = 13.0
offset_right = 71.0
offset_bottom = 29.0
text = "9999"
label_settings = SubResource("LabelSettings_hurr3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="shop_name" type="Control" parent="."]
material = ExtResource("1_n037p")
layout_mode = 3
anchors_preset = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 106.0
offset_bottom = 54.0
theme = ExtResource("2_qjdko")
script = ExtResource("3_32y4x")
border_size = Vector2(100, 48)
metadata/_custom_type_script = "uid://cr5icxx3wijsf"

[node name="shop_name_label" type="Label" parent="shop_name"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Egidius' Jerkinry"
label_settings = SubResource("LabelSettings_wloum")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="slide_border" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 319.0
offset_top = 6.0
offset_right = 379.0
offset_bottom = 70.0
theme = ExtResource("2_qjdko")
script = ExtResource("3_32y4x")
border_size = Vector2(60, 64)
metadata/_custom_type_script = "uid://cr5icxx3wijsf"

[node name="VBoxContainer" type="VBoxContainer" parent="slide_border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 9.0
offset_right = -8.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="buy_btn" type="Button" parent="slide_border/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("10_yvjwj")
text = "Buy"

[node name="info_btn" type="Button" parent="slide_border/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("10_yvjwj")
text = "Info"

[node name="shop_panel" type="Control" parent="."]
material = ExtResource("1_n037p")
layout_mode = 3
anchors_preset = 0
offset_left = 110.0
offset_top = 6.0
offset_right = 328.0
offset_bottom = 196.0
theme = ExtResource("2_qjdko")
script = ExtResource("3_32y4x")
border_size = Vector2(218, 190)
metadata/_custom_type_script = "uid://cr5icxx3wijsf"

[node name="MarginContainer" type="MarginContainer" parent="shop_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="shop_panel/MarginContainer"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="shop_vbox" type="VBoxContainer" parent="shop_panel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="shop_item_0" parent="shop_panel/MarginContainer/ScrollContainer/shop_vbox" instance=ExtResource("11_yvjwj")]
layout_mode = 2
my_item = "Bottlecap Jerkin"

[node name="shop_item_1" parent="shop_panel/MarginContainer/ScrollContainer/shop_vbox" instance=ExtResource("11_yvjwj")]
layout_mode = 2
my_item = "Monofilament Jerkin"

[node name="shop_item_2" parent="shop_panel/MarginContainer/ScrollContainer/shop_vbox" instance=ExtResource("11_yvjwj")]
layout_mode = 2
my_item = "Vestal Jerkin"

[node name="exit_btn" type="Control" parent="." node_paths=PackedStringArray("manual_decorations")]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -40.0
offset_right = 54.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_gvrf7")
content_highlight_color = Color(1, 0.647059, 0, 1)
manual_decorations = [NodePath("exit_texture")]
border_size = Vector2(108, 50)
metadata/_custom_type_script = "uid://21bcte5vesst"

[node name="exit_texture" type="TextureRect" parent="exit_btn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.5
offset_top = -8.5
offset_right = 40.5
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_yvjwj")

[connection signal="button_pressed" from="exit_btn" to="." method="_on_exit_btn_button_pressed"]
